2008-07-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/handlers/kml/KmlAltitudeModeTagHandler{.h|.cpp}
    * src/lib/geodata/handlers/kml/KmlExtrudeTagHandler{.h|.cpp}
    * src/lib/geodata/handlers/kml/KmlTessellateTagHandler{.h|.cpp}

    add tags for missing properties

2008-07-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/handlers/kml/KmlDocumentTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlFolderTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlLabelStyleTagHandler.cpp

    fix more possible memory leaks and unify debug output

2008-07-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataCoordinates{.h|.cpp}
    * src/lib/geodata/data/GeoDataDocument.cpp
    * src/lib/geodata/data/GeoDataGeometry{.h|.cpp}
    * src/lib/geodata/data/GeoDataPoint{.h|.cpp}

    fix setter in GeoDataCoordinates
    fix missing tessellate, altitudeMode and extrude properties in GeoDataGeometry
    fix missing setter in GeoDataPoint

2008-07-03  Patrick Spendrin    <ps_ml@gmx.de>

    * CMakeLists.txt
    * MarbleMacros.cmake
    * src/lib/tests/CMakeLists.txt
    * tests/CMakeLists.txt
    * tests/GeoPolygonTest.cpp
    * tests/MarbleWidgetSpeedTest.cpp

    unify testing stuff

2008-07-03  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/GeoDataPoint{.h|_p.h|.cpp}
    * src/lib/geodata/GeoDataCoordinates{.h|_p.h|.cpp}
    * src/lib/Quaternion.h

    use GeoDataCoordinates as a replacement for GeoDataPoint
    GeoDataCoordinates should be the abstract equivalent of
    a point on earth - GeoDataPoint is the equivalent of a Point
    tag in KML (which can have some additional information).

2008-07-01  Torsten Rahn <rahn@kde.org>

    * src/KdeMainWindow.cpp:
    * src/marble_part.{cpp,h,rc}:
    - Adding float item menus to the menu as well.

    * src/QtMainWindow.cpp:
    - removed qDebug line.

2008-06-30  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/CMakeLists.txt:
    * src/lib/geodata/CMakeLists.txt:
